Make sure links are accessible.
According to http://www.w3.org/TR/WCAG20/#navigation-mechanisms-refs, all links
should have text that makes it clear what the links are for. This change uses
text-replacement to add text that's invisible to visual browsers.

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700|Montserrat:400,700);
 
 @import "compass/reset";
+@import "compass/utilities/text/replacement";
 
 @import "syntax";
 
@@ -96,10 +97,8 @@ a.brand:hover {
 }
 
 .dart-logo {
-  display: inline-block;
-  background-image: url("/static/img/dart.png");
+  @include replace-text("/static/img/dart.png", 0, 0);
   width: 21px;
-  height: 21px;
 }
 
 h1 .version {
@@ -180,4 +179,8 @@ ol.toc {
 
 .pagination {
   @extend .pagination-centered;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  @include hide-text;
 }
